@@ -57,3 +57,19 @@ Syncronized channels directory with qDots/sm/channels
 
 10/24/09 Hendrik
 - incorporated changes in MATLAB/sm into MATLAB/Special_Measure/sm
+
+03/25/10 Hendrik
+- changed smrun to set constants before calling configfn.
+- wrote smabufconfig2 for generic configuration of buffered acquisition
+- Vivek changed figure number for channel display.
+- Improved smprintrange.
+- Modified smcATS660v2.m to throw error for (some) invalid samplerates.
+
+05/06/10 Hendrik
+- implemented smrestore.m and sminc.m
+- updated smpSpect[2].m
+- improved buffered acquisition support by smcSR830
+- added arming functionality to smatrigfn.m
+
+05/13/10 Hendrik
+- changed smrun to allow arguments to trafofn's.
