@@ -3,11 +3,16 @@ function val = smcIPS12010GPIB(ico, val, rate)
 % settings for GPIB:
 % usually board index is 0, address is 25
 % can change Timeout to 1
-% make sure to change the following
+% make sure to change the following:
+%               type smdata.inst([INSTRUMENT_NUMBER]).data.inst.EOIMode = 'off'
+%               type smdata.inst([INSTRUMENT_NUMBER]).data.inst.EOSCharCode = 'CR'
+%               type smdata.inst([INSTRUMENT_NUMBER]).data.inst.EOSMode = 'read'
 %               EOIMode = 'off'
 %               EOSCharCode = 'CR'
 %               EOSMode = 'read'
 % 1/18/2010: modified to close and open magnet if behavior is sluggish
+%           currently uses tic/toc instead of cputime because of bad
+%           behavior of cputime on MX400 computer.
 
 tic
 
@@ -91,7 +96,7 @@ switch ico(2) % channel
                             % switch on heater
                             fprintf(mag, '%s\r', 'H1'); fscanf(mag);  
                         
-                        
+                        pause(10);
                         % set the field target
                         fprintf(smdata.inst(ico(1)).data.inst, '%s\r', ['J' num2str(val)]);
                         fscanf(smdata.inst(ico(1)).data.inst);
@@ -147,7 +152,7 @@ switch ico(2) % channel
 
 
                     val = abs(val-curr)/abs(rate);
-                    elapsedtime=cputime*10-t_start;
+                    elapsedtime=toc;
                     if elapsedtime>2
                         fclose(mag);
                         fopen(mag);
@@ -167,8 +172,8 @@ switch ico(2) % channel
                     val = fscanf(mag, '%*c%f');
                  end
                  
-                 cputime*50
-                 elapsedtime=cputime*50-t_start
+
+                 elapsedtime=toc;
                 if elapsedtime>2
                     fclose(mag);
                     fopen(mag);
@@ -195,7 +200,7 @@ switch ico(2) % channel
                 fscanf(mag);
                                 
                 val = abs(val-curr)/abs(rate);
-                    elapsedtime=cputime*10-t_start;
+                    elapsedtime=toc;
                     if elapsedtime>2
                         fclose(mag);
                         fopen(mag);
@@ -205,7 +210,7 @@ switch ico(2) % channel
                 % read the current field value
                 fprintf(mag, '%s\r', 'R8');
                 val = fscanf(mag, '%*c%f');
-                elapsedtime=cputime*10-t_start;
+                elapsedtime=toc;
                 if elapsedtime>2
                     fclose(mag);
                     fopen(mag);
