@@ -32,7 +32,6 @@ if length(vals) == 1
     vals = vals * ones(nchan, 1);
 end
 
-% could make some variables persistent and add recycling flag argument.
 
 rangeramp = vertcat(smdata.channels(channels).rangeramp);
 instchan = vertcat(smdata.channels(channels).instchan);
@@ -40,6 +39,10 @@ instchan = vertcat(smdata.channels(channels).instchan);
 if nargin >= 3 %&& ~isempty(ramprate)
     if size(ramprate, 2) > 1
         ramprate = ramprate';
+    end
+
+    if length(ramprate) == 1
+        ramprate = ramprate * ones(nchan, 1);
     end
 
     mask = isfinite(ramprate);
@@ -125,7 +128,7 @@ end
 for k = stepchan'    
     smdata.inst(instchan(k, 1)).cntrlfn([instchan(k, :), 1], vals2(k));
 end
-if ishandle(1001)
+if ishandle(999)
     smdispchan(channels(stepchan), vals(stepchan));
 end
 
